--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: python
+
+services:
+  - postgresql
 python:
   - "3.4"
   - "3.5"
@@ -9,7 +12,12 @@ python:
   - "nightly" # currently points to 3.7-dev
 
 install: "pip3 install -r requirements.txt"
-
+before_script:
+  - psql -c "create database django_acmgeneral;" -U postgres
+  - psql -c "CREATE USER djangouser WITH PASSWORD 'djangoUserPassword';" -U postgres
+  - psql -c "GRANT ALL PRIVILEGES ON django_acmgeneral TO djangouser;" -U postgres
+  - psql -c "ALTER USER djangouser CREATEDB;"
 script:
   - cd ACM_General
+  - cp ACM_General/settings_local.template ACM_General/settings_local.py
   - python3 manage.py test
