--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install: "pip3 install -r requirements.txt"
 before_script:
   - psql -c "create database django_acmgeneral;" -U postgres
   - psql -c "CREATE USER djangouser WITH PASSWORD 'djangoUserPassword';" -U postgres
-  - psql -c "GRANT ALL PRIVILEGES ON django_acmgeneral TO djangouser;" -U postgres
+  - psql -c "GRANT ALL PRIVILEGES ON DATABASE django_acmgeneral TO djangouser;" -U postgres
   - psql -c "ALTER USER djangouser CREATEDB;"
 script:
   - cd ACM_General
