--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
   - psql -c "create database django_acmgeneral;" -U postgres
   - psql -c "CREATE USER djangouser WITH PASSWORD 'djangoUserPassword';" -U postgres
   - psql -c "GRANT ALL PRIVILEGES ON DATABASE django_acmgeneral TO djangouser;" -U postgres
-  - psql -c "ALTER USER djangouser CREATEDB;"
+  - psql -c "ALTER USER djangouser CREATEDB;" -U postgres
 script:
   - cd ACM_General
   - cp ACM_General/settings_local.template ACM_General/settings_local.py
