--- a/ACM_General/ACM_General/settings_local.template
+++ b/ACM_General/ACM_General/settings_local.template
@@ -1,6 +1,19 @@
 # SECURITY WARNING: keep the secret key used in production secret!
 SECRET_KEY = 'ThisIsNotForProduction,PleaseDoNotUseThisForProduction'
 
+# SECURITY WARNING: don't run with debug turned on in production!
+DEBUG = True
+
+ALLOWED_HOSTS = [u'localhost'] 
+
+ENFORCED_EMAIL_DOMAINS = ['mst.edu']
+
+# Static files (CSS, JavaScript, Images)
+# https://docs.djangoproject.com/en/1.10/howto/static-files/
+
+STATIC_URL = '/static/'
+STATIC_ROOT = '/var/static/'
+
 # Third Party Authentication
 SOCIAL_AUTH_CONFIG = {
     'oauth2': {
