--- a/ACM_General/ACM_General/settings_local.template
+++ b/ACM_General/ACM_General/settings_local.template
@@ -1,11 +1,15 @@
 # SECURITY WARNING: keep the secret key used in production secret!
+# Development: SECRET_KEY = High bit key
 SECRET_KEY = 'ThisIsNotForProduction,PleaseDoNotUseThisForProduction'
 
 # SECURITY WARNING: don't run with debug turned on in production!
+# Development: DEBUG = False
 DEBUG = True
 
+# Develpoment: ALLOWED_HOSTS = [u'acm.mst.edu']
 ALLOWED_HOSTS = [u'localhost'] 
 
+# Develpoment: ENFORCED_EMAIL_DOMAINS = ['mst.edu']
 ENFORCED_EMAIL_DOMAINS = ['mst.edu']
 
 # Static files (CSS, JavaScript, Images)
@@ -37,3 +41,15 @@ DATABASES = {
         'PORT': '',
     }
 }
+
+# CSRF_COOKIE_SECURE = True
+# SESSION_COOKIE_SECURE = True
+# CONN_MAX_AGE = 0
+# Run Django with python3 -R 
+# SECURE_HSTS_SECONDS = 3600
+# SECURE_HSTS_INCLUDE_SUBDOMAINS = True
+# SECURE_CONTENT_TYPE_NOSNIFF = True
+# SECURE_BROWSER_XSS_FILTER = True
+# SECURE_SSL_REDIRECT = True
+# CSRF_COOKIE_HTTPONLY = True
+# X_FRAME_OPTIONS = "DENY" 
