--- a/ACM_General/ACM_General/django_nginx.conf
+++ b/ACM_General/ACM_General/django_nginx.conf
@@ -2,29 +2,29 @@
 
 # the upstream component nginx needs to connect to
 upstream django {
-    # server unix:///path/to/your/mysite/mysite.sock; # for a file socket
-    server 127.0.0.1:8001; # for a web port socket (we'll use this first)
+    server unix:///home/kevin/acm.mst.edu/ACM_General/ACM_General.sock; # for a file socket
+    # server 127.0.0.1:8001; # for a web port socket (we'll use this first)
 }
 
 # configuration of the server
 server {
     # the port your site will be served on
-    listen      8000;
+    listen      80;
     # the domain name it will serve for
-    server_name 162.243.57.206; # substitute your machine's IP address or FQDN
+    server_name 192.241.255.107; # substitute your machine's IP address or FQDN
 
      #Django media
      location /media  {
-        alias /root/acm.mst.edu/ACM_General/media;
+        alias /home/kevin/acm.mst.edu/ACM_General/media;
      }
 
     location /static {
-        alias /root/acm.mst.edu/ACM_General/static; # your Django project's static files - amend as required
+        alias /home/kevin/acm.mst.edu/ACM_General/static; # your Django project's static files - amend as required
     }
 
     # Finally, send all non-media requests to the Django server.
     location / {
         uwsgi_pass  django;
-        include     /root/acm.mst.edu/ACM_General/ACM_General/uwsgi_params; # the uwsgi_params file you installed
+        include     /home/kevin/acm.mst.edu/ACM_General/ACM_General/uwsgi_params; # the uwsgi_params file you installed
     }
 }
