[FIX] Fixes to make travis work (hopefully)

--- a/Dependencies/ACMGeneral_uwsgi.ini
+++ b/Dependencies/ACMGeneral_uwsgi.ini
@@ -1,8 +1,9 @@
 # mysite_uwsgi.ini file
 [uwsgi]
-for-readline = env_vars.txt
-    env = %(_)
-endfor = 
+for-readline = /etc/uwsgi/apps-available/env_vars.txt
+      env = %(_)
+endfor =
+
 plugins = python3
 uid = www-data
 gid = www-data
