[UPDATE] Modular setup.sh control for dev and live builds

--- a/Dependencies/ACMGeneral_uwsgi.ini
+++ b/Dependencies/ACMGeneral_uwsgi.ini
@@ -10,7 +10,7 @@ gid = www-data
 
 # Django-related settings
 # the base directory (full path)
-chdir           = /var/django/acm.mst.edu/ACM_General
+chdir           = /var/django/$BUILD_URL/ACM_General
 # Django's wsgi file
 module          = ACM_General.wsgi
 # the virtualenv (full path)
@@ -23,7 +23,7 @@ master          = true
 processes       = 10
 enable-threads = true
 # the socket (use the full path to be safe
-socket          =  /var/django/acm.mst.edu/ACM_General/ACM_General.sock
+socket          =  /var/django/$BUILD_URL/ACM_General/ACM_General.sock
 
 # ... with appropriate permissions - may be needed
 chmod-socket    = 666
