[UPDATE] Updated documentation with sphinx
- Updated Makefile so that sphinx auto generates documentation
  for all apps (events, payments, etc.)
- Also went through various files and updated them so that sphinx
  doesn't give any errors when creating the html files from the
  auto generated rst files.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -27,4 +27,4 @@ help:
 # a change to the python files, it will still create new files in case the
 # "SPHINX_APIDOC_OPTIONS" variable was changed.
 rst:
-	sphinx-apidoc -o apps/events/ ../ACM_General/events/ ../ACM_General/events/migrations/ --force
+	sphinx-apidoc -o app_rst_docs/ ../ACM_General/ ../ACM_General/*/migrations/ --force
